[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://song.ogg" type="AudioStream" id=2]
[ext_resource path="res://world/PanningCamera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://units/Unit.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/board/GameBoard.gd" type="Script" id=5]
[ext_resource path="res://world/board/HexMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/Conductor.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]

[node name="GameBoard" type="YSort" parent="."]
script = ExtResource( 5 )

[node name="Conductor" parent="GameBoard" instance=ExtResource( 7 )]
stream = ExtResource( 2 )
volume_db = -15.0
bpm = 115

[node name="HexMap" parent="GameBoard" instance=ExtResource( 6 )]

[node name="Units" type="Node" parent="GameBoard"]

[node name="Unit" parent="GameBoard/Units" instance=ExtResource( 4 )]
position = Vector2( 144, 56 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Unit2" parent="GameBoard/Units" instance=ExtResource( 4 )]
position = Vector2( 176, 56 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Unit3" parent="GameBoard/Units" instance=ExtResource( 4 )]
position = Vector2( 208, 56 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="PanningCamera2D" parent="." instance=ExtResource( 3 )]

[connection signal="beat" from="GameBoard/Conductor" to="GameBoard" method="_on_Conductor_beat"]
[connection signal="moved" from="GameBoard/HexMap" to="GameBoard" method="_on_Hexmap_moved"]
